<resources>
    <string name="app_name">ControleAssociados</string>
    <string name="cadastrar_associado">Novo Associado</string>
    <string name="configurar">Configuraçoes</string>
    <string name="hint_nome">Nome do associado*</string>
    <string name="valor_mensalidade_label">Mensalidade: </string>
    <string name="check_em_atraso">Associado com mensalidade em atraso?</string>
    <string name="hint_data_nascimento">Data de nascimento</string>
    <string name="tv_nascimento">Nascimento: </string>
    <string name="hint_data_ultimo_pagamento">Ultimo pagamento*</string>
    <string name="tv_ultimo_pagamento">Ultimo pagamento: </string>
    <string name="hint_data_associacao">Data de associaçao</string>
    <string name="tv_data_associacao">Data de associacao: </string>
    <string name="tv_telefone">Telefone: </string>
    <string name="hint_telefone">Telefone do associado</string>
    <string name="valor_saldo_label">Saldo: </string>
    <string name="titulo_main">Virote do Curuzivis FC</string>
    <string name="menu_voltar">Voltar</string>
    <string name="novo_gasto_fixo">Novo gasto fixo</string>
    <string name="novo_gasto_pontual">Novo gasto pontual</string>
    <string name="titulo_configutation">Conta da cerveja</string>
    <string name="tv_descricao_gasto_label">Gasto: </string>
    <string name="tv_valor_gasto_label">Valor: </string>
    <string name="tv_data_criacao_gasto_label">Data de criaçao: </string>
    <string name="title_activity_gasto_fixo">GastoFixoActivity</string>
    <string name="hint_descricao_gasto">Gastou em que?</string>
    <string name="hint_valor_gasto">Gastou quanto?</string>
    <string name="previsao_receita_label">Previsao de receitas para o mes: </string>
    <string name="previsao_despesa_label">Previsao de despesas para o mes: </string>
    <string name="gastos_fixos_label">GASTOS FIXOS:</string>
    <string name="gastos_pontuais_label">GASTOS PONTUAIS:</string>
</resources>
