<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_associado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.kuka.controleassociados.AssociadoActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/hint_nome"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/hint_telefone"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <fragment
        android:id="@+id/fg_data_nascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="br.com.kuka.controleassociados.BirthDatePickerFragment"/>

    <fragment
        android:id="@+id/fg_data_ultimo_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="br.com.kuka.controleassociados.LastPaymentDatePickerFragment"/>

    <fragment
        android:id="@+id/fg_data_associacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="br.com.kuka.controleassociados.AssociationDatePickerFragment"/>

    <CheckBox
        android:id="@+id/cb_em_atraso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:text="@string/check_em_atraso" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_salvar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_save"
            app:fabSize="normal"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:layout_marginRight="10dp"
            app:rippleColor="@android:color/transparent"
            android:onClick="salvar"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_deletar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_delete"
            app:fabSize="normal"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:layout_marginRight="10dp"
            app:rippleColor="@android:color/transparent"
            android:onClick="deletar" />
    </LinearLayout>
</LinearLayout>
